--- a/pipewire.conf.d/lcd-x.conf
+++ b/pipewire.conf.d/lcd-x.conf
@@ -1,8 +1,7 @@
-# Copy this file into a conf.d/ directory such as
-# ~/.config/pipewire/filter-chain.conf.d/
-#
+
 context.modules = [
-    { name = libpipewire-module-filter-chain
+    {
+        name = libpipewire-module-filter-chain
         args = {
             node.description = "LCD-X"
             media.name       = "LCD-X"
@@ -10,73 +9,73 @@ context.modules = [
                 nodes = [
                     {
                         type  = builtin
-                        name  = eq_preamp
+                        name  = eq_band_0
                         label = bq_highshelf
-                        control = { "Freq" = 0 "Q" = 1.0 "Gain" = -6.8 }
+                        control = { "Freq" = 0 "Q" = 1 "Gain" = -5.08 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_1
                         label = bq_lowshelf
-                        control = { "Freq" = 45 "Q" = 0.71 "Gain" = 1.3 }
+                        control = { "Freq" = 105 "Q" = 0.7 "Gain" = 4.5 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_2
-                        label = bq_lowshelf
-                        control = { "Freq" = 105 "Q" = 0.71 "Gain" = 5.5 }
+                        label = bq_peaking
+                        control = { "Freq" = 191.5 "Q" = 0.43 "Gain" = -2.5 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_3
                         label = bq_peaking
-                        control = { "Freq" = 470 "Q" = 2.0 "Gain" = 1.0 }
+                        control = { "Freq" = 738.3 "Q" = 2.04 "Gain" = -0.4 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_4
                         label = bq_peaking
-                        control = { "Freq" = 1250 "Q" = 3.2 "Gain" = -1.6 }
+                        control = { "Freq" = 1216.6 "Q" = 1.51 "Gain" = -2.2 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_5
-                        label = bq_highshelf
-                        control = { "Freq" = 1500 "Q" = 0.71 "Gain" = 6.0 }
+                        label = bq_peaking
+                        control = { "Freq" = 1701.2 "Q" = 2.38 "Gain" = 1.8 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_6
                         label = bq_peaking
-                        control = { "Freq" = 2200 "Q" = 4.0 "Gain" = -1.7 }
+                        control = { "Freq" = 3281.4 "Q" = 3.29 "Gain" = 1.9 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_7
                         label = bq_peaking
-                        control = { "Freq" = 3800 "Q" = 1.4 "Gain" = 1.5 }
+                        control = { "Freq" = 4041.9 "Q" = 1.7 "Gain" = 4.6 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_8
                         label = bq_peaking
-                        control = { "Freq" = 5400 "Q" = 3.5 "Gain" = -5.4 }
+                        control = { "Freq" = 5250.4 "Q" = 4.15 "Gain" = -3.9 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_9
                         label = bq_peaking
-                        control = { "Freq" = 7400 "Q" = 5.0 "Gain" = -1.5 }
+                        control = { "Freq" = 9260.3 "Q" = 2.03 "Gain" = 5.4 }
                     }
                     {
                         type  = builtin
                         name  = eq_band_10
                         label = bq_highshelf
-                        control = { "Freq" = 11000 "Q" = 0.71 "Gain" = -10 }
+                        control = { "Freq" = 10000 "Q" = 0.7 "Gain" = -8.4 }
                     }
                 ]
                 links = [
-                    { output =  "eq_preamp:Out" input = "eq_band_1:In"  }
+                    { output =  "eq_band_0:Out" input = "eq_band_1:In"  }
                     { output =  "eq_band_1:Out" input = "eq_band_2:In"  }
                     { output =  "eq_band_2:Out" input = "eq_band_3:In"  }
                     { output =  "eq_band_3:Out" input = "eq_band_4:In"  }
@@ -85,17 +84,17 @@ context.modules = [
                     { output =  "eq_band_6:Out" input = "eq_band_7:In"  }
                     { output =  "eq_band_7:Out" input = "eq_band_8:In"  }
                     { output =  "eq_band_8:Out" input = "eq_band_9:In"  }
-                    { output =  "eq_band_9:Out" input = "eq_band_10:In" }
+                    { output =  "eq_band_9:Out" input = "eq_band_10:In"  }
                 ]
             }
 	    audio.channels = 2
 	    audio.position = [ FL FR ]
             capture.props = {
-                node.name   = "effect_input.eq10"
+                node.name   = "effect_input.eq"
                 media.class = Audio/Sink
             }
             playback.props = {
-                node.name   = "effect_output.eq10"
+                node.name   = "effect_output.eq"
                 node.passive = true
             }
         }
